# theglobe

./: .dockerignore  .env.template  README.md  azure.yaml  dev.sh  docker-compose.dev.yml  docker-compose.yml  openapi.yaml  package-lock.json
.github/workflows/: azure-dev.yml  e2e.yml
.tmp/: test_cosmos_conn.py
infra/: abbreviations.json  keyvault-secrets.bicep  keyvault-secrets.parameters.json  main.bicep  main.json
infra/app/: ai-foundry.bicep  db-avm.bicep
infra/scripts/: create_agent.py
scripts/: clear_vscode_cache.sh  set-secrets.sh
src/api/: .env  .funcignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  local.settings.json.template  openapi.yaml  pyproject.toml  pytest.ini  requirements.txt
src/api/blog/: app.py  models.py  routes.py
src/api/catchAllFunction/: __init__.py
src/api/chat/: agent.py  list_assistants.py
src/api/tests/: conftest.py  test_main.py
src/api/todo/: app.py  models.py  routes.py
src/web/: .gitignore  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
src/web/public/: manifest.json
src/web/src/: App.css  App.tsx
src/web/src/actions/: common.ts  itemActions.ts  listActions.ts
src/web/src/components/: AdminPage.tsx  BlogPostDetail.tsx  ChatPage.tsx  LanguageSwitcher.tsx  NewsFeed.tsx  SearchPage.tsx  todoContext.ts  todoItemDetailPane.tsx  todoItemListPane.tsx  todoListMenu.tsx
src/web/src/config/: index.ts
tests/: README.md  package-lock.json  package.json  playwright.config.ts  theglobe.spec.ts  todo.spec.ts  tsconfig.json
tests-backup/: README.md
(+14 files in other folders)
